--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,6 @@ h1 {
   text-align: center; /* Центрируем заголовок */
   margin-bottom: 20px; /* Отступ снизу */
   color: #007bff; /* Цвет заголовка */
+  font-family: "Arial", sans-serif; /* Шрифт заголовка */
+  font-size: 2.5em; /* Размер шрифта заголовка */
 }
